# aau-label

./: README.md  pyproject.toml
src/aau_label/: __init__.py  errors.py  label_handler.py  model.py  protocols.py  utilities.py
src/aau_label/io/: __init__.py  darknet.py  pascal.py
src/aau_label/parsers/: __init__.py  darknet_parser.py  pascal_parser.py  protocol.py
tests/: test___init__.py
tests/data/gomap_format/: donations.json  trials.json
